# time

./: .darcs-boring  .envrc  .format.ignore  .gitignore  .hindent.ignore  .travis.yml  Checklist  CurrentTime.hs  LICENSE  Makefile  README  Readme.md  Setup.hs  ShowDST.hs  Test.hs  TestFixed.hs  TestFormat.hs  TestFormatStuff.c  TestFormatStuff.h  TestTime.hs  TestTime.ref  TimeLib.cabal  TimeZone.hs  aclocal.m4  build  cabal.project  changelog.md  configure  configure.ac  format-all  fourmolu.yaml  fullcheck  fullcheck.ps1  hindent-all  justfile  package.conf.in  prologue.txt  stack.tools.yaml  stack.yaml  time.cabal  (+2 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: .gitignore  chrony.conf  wait-for-tai.c
.github/workflows/: actions.yaml  ci.mhs.yml  ci.wasm32.yml  ci.yaml  ci.yml
Data/: Fixed.hs  Time.hs
Data/Time/: Calendar.hs  Clock.hs  Format.hs  LocalTime.hs  TAI.hs
Data/Time/Calendar/: Calendar.hs  Days.hs  Easter.hs  Format.hs  Gregorian.hs  ISO8601Week.hs  ISOWeekDay.hs  Julian.hs  JulianYearDay.hs  MonthDay.hs  OrdinalDate.hs  Private.hs  TimeOfDay.hs  Timezone.hs  WeekDate.hs  YearDay.hs
Data/Time/Clock/: CTimeval.hs  Current.hs  POSIX.hs  Scale.hs  TAI.hs  UTC.hs  UTCDiff.hs
Data/Time/Format/: Parse.hs
Data/Time/LocalTime/: Format.hs  LocalTime.hs  Parse.hs  TimeOfDay.hs  TimeZone.hs  Timezone.hs
System/Time/: Calendar.hs  Clock.hs  TAI.hs
System/Time/Calendar/: Calendar.hs  Days.hs  Format.hs  Gregorian.hs  ISOWeek.hs  ISOWeekDay.hs  Private.hs  TimeOfDay.hs  Timezone.hs  YearDay.hs
System/Time/Clock/: Current.hs  POSIX.hs  Scale.hs  UTC.hs
Test/: AddDays.hs  AddDaysRef.hs  ClipDates.hs  ClipDatesRef.hs  ConvertBack.hs  LongWeekYears.hs  LongWeekYearsRef.hs  Makefile  TAI_UTC_DAT.hs  TestCalendars.hs  TestCalendarsRef.hs  TestEaster.hs  TestEasterRef.hs  TestFormat.hs  TestMonthDay.hs  TestMonthDayRef.hs  TestParseDAT.hs  TestParseDAT_Ref.hs  TestParseTime.hs  TestTime.hs  TestTimeRef.hs  TestUtil.hs  Tests.hs
TimeLib.xcode/: project.pbxproj
TimeLib.xcodeproj/: project.pbxproj
benchmark/: Main.hs  stack.yaml  time-bench.cabal  time.cabal
cbits/: HsTime.c
fixed/: LICENSE  Makefile  fixed.cabal
fixed/test/: Makefile
include/: HsTime.h  Makefile
lib/Data/: Format.hs  IntegerAdditive.hs  Time.hs
lib/Data/Time/: Calendar.hs  Clock.hs  Format.hs  LocalTime.hs
lib/Data/Time/Calendar/: CalendarDiffDays.hs  Class.hs  Days.hs  Duration.hs  Easter.hs  Gregorian.hs  HasDays.hs  Julian.hs  JulianYearDay.hs  Month.hs  MonthCount.hs  MonthDay.hs  OrdinalDate.hs  Private.hs  Quarter.hs  Types.hs  Week.hs  WeekDate.hs
lib/Data/Time/Calendar/HasDays/: Class.hs  Instances.hs
lib/Data/Time/Clock/: AbsoluteTime.hs  CTimespec.hsc  CTimeval.hs  DiffTime.hs  GetTime.hs  NominalDiffTime.hs  POSIX.hs  POSIXTime.hs  Raw.hs  Scale.hs  System.hs  TAI.hs  UTC.hs  UTCDiff.hs  UniversalTime.hs
lib/Data/Time/Clock/Internal/: AbsoluteTime.hs  CTimespec.hsc  CTimeval.hs  DiffTime.hs  GetTime.hs  NominalDiffTime.hs  POSIXTime.hs  SystemTime.hs  UTCDiff.hs  UTCTime.hs  UniversalTime.hs
lib/Data/Time/Format/: ISO8601.hs  Internal.hs  Locale.hs  Parse.hs
lib/Data/Time/Format/Format/: Class.hs  Instances.hs
lib/Data/Time/Format/ISO8601/: Duration.hs
lib/Data/Time/Format/Parse/: Class.hs  Instances.hs
lib/Data/Time/LocalTime/: LocalTime.hs  TimeOfDay.hs  TimeZone.hs
lib/Data/Time/LocalTime/Internal/: CalendarDiffTime.hs  Foreign.hs  LocalTime.hs  TimeOfDay.hs  TimeZone.hs  ZonedTime.hs
lib/System/: Locale.hs
lib/cbits/: HsTime.c
lib/include/: HsTime.h  HsTimeConfig.h.in  HsTimeConfig.h.in~
test/: AddDays.hs  AddDays.ref  ClipDates.hs  ClipDates.ref  ConvertBack.hs  CurrentTime.hs  ForeignCalls.hs  LongWeekYears.hs  Makefile  RealToFracBenchmark.hs  ShowDST.hs  ShowDefaultTZAbbreviations.hs  ShowTime.hs  TestCalendars.hs  TestCalendars.ref  TestEaster.hs  TestEaster.ref  TestFormat.hs  TestMonthDay.hs  TestMonthDay.ref  TestParseDAT.hs  TestParseTime.hs  TestTime.hs  TestTime.ref  TimeZone.hs  UseCases.lhs
test/Test/: AddDays.hs  ClipDates.hs  ClipDatesRef.hs  ClockConversion.hs  ConvertBack.hs  LongWeekYears.hs  Resolution.hs  TAI_UTC_DAT.hs  TestCalendars.hs  TestEaster.hs  TestFormat.hs  TestFormatStuff.c  TestMonthDay.hs  TestParseDAT.hs  TestParseTime.hs  TestTAI.hs  TestTime.hs  TestTimeRef.hs  TestTimeZone.hs  TestUtil.hs  TestValid.hs  Tests.hs
test/main/: Main.hs
test/main/Test/: AddDiff.hs  Arbitrary.hs  TestUtil.hs  Tests.hs  Types.hs
test/main/Test/Calendar/: AddDays.hs  CalendarProps.hs  Calendars.hs  ClipDates.hs  ClipDatesRef.hs  ConvertBack.hs  DayPeriod.hs  Duration.hs  Easter.hs  HasDays.hs  LongWeekYears.hs  MonthDay.hs  MonthOfYear.hs  Quarter.hs  Valid.hs  Week.hs  Year.hs
test/main/Test/Calendar/EasterData/: README.md  easter-reference-1900-2099.csv
test/main/Test/Clock/: Conversion.hs  Lift.hs  Pattern.hs  Resolution.hs  TAI.hs
test/main/Test/Format/: Compile.hs  Duration.hs  Format.hs  ISO8601.hs  ParseTime.hs
test/main/Test/LocalTime/: CalendarDiffTime.hs  Time.hs  TimeOfDay.hs  TimeRef.hs
test/template/: Main.hs
test/template/Test/: TastyWrapper.hs
test/unix/: Main.hs
test/unix/Test/: TestUtil.hs
test/unix/Test/Format/: Format.hs
test/unix/Test/LocalTime/: HsTime.h  TimeZone.hs  TimeZoneFallback.c
time/: Makefile  time.cabal
time.xcodeproj/: cabalbuild  fixerrormsgs  project.pbxproj
time/Data/: Time.hs
time/Data/Time/Calendar/: OrdinalDate.hs  Private.hs
time/Data/Time/LocalTime/: LocalTime.hs  TimeOfDay.hs  TimeZone.hs
time/test/: ClipDates.hs  ConvertBack.hs  LongWeekYears.hs  LongWeekYears.ref  Makefile  TestCalendars.hs  TestParseDAT.ref  TestParseTime.hs  TestTime.hs  TestTime.ref
