Name:		time
Version:	0.1
Stability:	Alpha
License:	BSD3
License-File:	LICENSE
Author:		Ashley Yakeley
Maintainer:	<ashley@semantic.org>
Homepage:	http://semantic.org/TimeLib/
Category:
Build-Depends:	base
Synopsis:	a new time library
Exposed-modules:
	Data.Fixed,
	Data.Time.Clock,
	Data.Time.TAI,
	Data.Time.Calendar
Extensions:	ForeignFunctionInterface
C-Sources:	timestuff.c
Other-modules:
	Data.Time.Clock.Scale,
	Data.Time.Clock.UTC,
	Data.Time.Clock.POSIX,
	Data.Time.Clock.Current,
	Data.Time.Calendar.Private,
	Data.Time.Calendar.Days,
	Data.Time.Calendar.Calendar,
	Data.Time.Calendar.Gregorian,
	Data.Time.Calendar.ISOWeekDay,
	Data.Time.Calendar.Format,
	Data.Time.Calendar.YearDay,
	Data.Time.Calendar.Timezone,
	Data.Time.Calendar.TimeOfDay
