Name:		time
Version:	0.2.1
Stability:	Beta
License:	BSD3
License-File:	LICENSE
Author:		Ashley Yakeley
Maintainer:	<ashley@semantic.org>
Homepage:	http://semantic.org/TimeLib/
Category:
Build-Depends:	base
Synopsis:	a new time library
Exposed-modules:
	Data.Fixed,
	Data.Time.Calendar,
	Data.Time.Clock,
	Data.Time.TAI,
	Data.Time.LocalTime,
	Data.Time
Extensions:	ForeignFunctionInterface
C-Sources:	timestuff.c
Other-modules:
	Data.Time.Calendar.Private,
	Data.Time.Calendar.Days,
	Data.Time.Calendar.YearDay,
	Data.Time.Calendar.Gregorian,
	Data.Time.Calendar.ISO8601Week,
	Data.Time.Clock.Scale,
	Data.Time.Clock.UTC,
	Data.Time.Clock.POSIX,
	Data.Time.Clock.Current,
	Data.Time.LocalTime.TimeZone,
	Data.Time.LocalTime.TimeOfDay,
	Data.Time.LocalTime.LocalTime,
	Data.Time.LocalTime.Format
