name:           time
version:        1.5
stability:      stable
license:        BSD3
license-file:   LICENSE
author:         Ashley Yakeley
maintainer:     <ashley@semantic.org>
homepage:       https://github.com/haskell/time
synopsis:       A time library
description:    A time library
category:       System
build-type:     Configure
cabal-version:  >=1.14
x-follows-version-policy:

extra-source-files:
    aclocal.m4
    configure.ac
    configure
    include/HsConfigure.h
    include/HsTime.h
    include/HsTimeConfig.h.in
    Test/*.hs
    Test/*.lhs
    Test/*.c
    Test/*.h
extra-tmp-files:
    config.log
    config.status
    autom4te.cache
    include/HsTimeConfig.h

source-repository head
  type:     git
  location: https://github.com/haskell/time

library
    hs-source-dirs: lib
    build-depends: 
        base >= 4.4 && < 5,
        deepseq >= 1.1,
        old-locale
    ghc-options: -Wall
    default-language: Haskell2010
    if impl(ghc)
        default-extensions: 
            Rank2Types 
            DeriveDataTypeable 
            StandaloneDeriving
        cpp-options: -DLANGUAGE_Rank2Types -DLANGUAGE_DeriveDataTypeable -DLANGUAGE_StandaloneDeriving
    else
        if impl(hugs)
            default-extensions: Rank2Types
            cpp-options: -DLANGUAGE_Rank2Types
    if os(windows)
        build-depends: Win32
    exposed-modules:
        Data.Time.Calendar,
        Data.Time.Calendar.MonthDay,
        Data.Time.Calendar.OrdinalDate,
        Data.Time.Calendar.WeekDate,
        Data.Time.Calendar.Julian,
        Data.Time.Calendar.Easter,
        Data.Time.Clock,
        Data.Time.Clock.POSIX,
        Data.Time.Clock.TAI,
        Data.Time.LocalTime,
        Data.Time.Format,
        Data.Time
    default-extensions:    CPP
    c-sources:    cbits/HsTime.c
    other-modules:
        Data.Time.Calendar.Private,
        Data.Time.Calendar.Days,
        Data.Time.Calendar.Gregorian,
        Data.Time.Calendar.JulianYearDay,
        Data.Time.Clock.Scale,
        Data.Time.Clock.UTC,
        Data.Time.Clock.CTimeval,
        Data.Time.Clock.UTCDiff,
        Data.Time.LocalTime.TimeZone,
        Data.Time.LocalTime.TimeOfDay,
        Data.Time.LocalTime.LocalTime,
        Data.Time.Format.Parse
    include-dirs:    include
    if os(windows)
        install-includes:
            HsTime.h
    else
        install-includes:
            HsTime.h
            HsTimeConfig.h

test-suite tests
    hs-source-dirs: test
    type: exitcode-stdio-1.0
    default-language: Haskell2010
    default-extensions: 
        Rank2Types
        CPP
        DeriveDataTypeable
        StandaloneDeriving
        ExistentialQuantification
        MultiParamTypeClasses
        FlexibleInstances
        UndecidableInstances
        ScopedTypeVariables
    ghc-options: -Wall
    c-sources: cbits/HsTime.c test/Test/TestFormatStuff.c
    include-dirs: include
    build-depends: 
        base,
        deepseq,
        old-locale,
        time == 1.5,
        Cabal >= 1.16,
        process,
        QuickCheck >= 2.5.1,
        test-framework >= 0.8,
        test-framework-quickcheck2 >= 0.3,
        unix
    main-is: Test.hs
    other-modules:
        Test.Tests
        Test.TestTime
        Test.TestTimeRef
        Test.TestParseDAT
        Test.TAI_UTC_DAT
        Test.TestParseDAT_Ref
        Test.TestParseTime
        Test.TestMonthDay
        Test.TestMonthDayRef
        Test.TestFormat
        Test.TestEaster
        Test.TestEasterRef
        Test.TestCalendars
        Test.TestCalendarsRef
        Test.LongWeekYears
        Test.LongWeekYearsRef
        Test.ConvertBack
        Test.ClipDates
        Test.ClipDatesRef
        Test.AddDays
        Test.AddDaysRef
        Test.TestUtil

